--- a/frontend/src/styles/base.scss
+++ b/frontend/src/styles/base.scss
@@ -118,7 +118,7 @@ li {
 
 .content_grid {
   display: grid;
-  grid-template-columns: 1fr minmax(min-content, $max-content-width) 1fr;
+  grid-template-columns: minmax($gutter-width, 1fr) minmax(min-content, $max-content-width) minmax($gutter-width, 1fr);
 }
 
 .page {
@@ -131,9 +131,20 @@ li {
   min-height: 10px;
 }
 
+.col_gutter {
+  padding-left: $gutter-padding;
+  padding-right: $gutter-padding;
+}
+
 @media (max-width: $tablet) {
+  .content_grid {
+    display: grid;
+    grid-template-columns: 1fr minmax(min-content, $max-content-width) 1fr;
+  }
+
   .col_gutter {
     width: 0;
+    padding: 0;
   }
 
   .col_main {
